syntax = "proto2";
import "proto/common/Pagination.proto";
package message.product;
message BuyChainsUsersReq
{
	required int64 buy_chains_id = 1;//接龙活动id
	required int64 store_id = 2;
	required message.common.Pagination pagination = 3; // 分页
}
